[package]
name = "mini_project10"
version = "0.1.0"
edition = "2021"


[dependencies]
lambda_http = "0.11.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
rand = "0.8.5"
openssl = { version = "0.10.35", features = ["vendored"] }


